samples/_failures_safe/1761468828_60fa93_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0732bb91.c: In function ‘parse_string’:
./samples/SAFE/__tmp_0732bb91.c:169:9: error: expected declaration or statement at end of input
  169 |         if (c == '"') {
      |         ^~
./samples/SAFE/__tmp_0732bb91.c:169:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0732bb91.c:169:9: error: expected declaration or statement at end of input
